# bril

HW/HW2_Rohit/: dce.py  lvn.py  turnt.toml
HW/HW3_Rohit/: cfg.py  dfa.py  ex1.AVAILABLE.out  ex1.LIVENESS.out  ex1.REACHING.out  ex1.VERYBUSY.out  ex1.bril  ex2.AVAILABLE.out  ex2.LIVENESS.out  ex2.REACHING.out  ex2.VERYBUSY.out  ex2.bril  hw3.qmd  turnt.toml
HW/HW5_Rohit/llvm-div-check/: CMakeLists.txt  DivCheckPass.cpp  test.cpp
HW/Sharmila_Rohit_Project/: main_1.py
HW/Sharmila_Rohit_Project/1/: example1  example1_output.csv  massif.out.2357  optimized_example1_output.csv  optimized_mem_alloc_dealloc.cpp
HW/Sharmila_Rohit_Project/2/: example2  example2_output.csv  massif.out.7548  mem_fragmentation.cpp  optimized_example2_output.csv
HW/Sharmila_Rohit_Project/3/: cache_misses.cpp  example3  example3_output.csv  massif.out.7820  optimized_example3_output.csv
HW/Sharmila_Rohit_Project/4/: example4  example4_output.csv  massif.out.8093  optimized_example4_output.csv  optimized_growing_ds.cpp
HW/Sharmila_Rohit_Project/5/: example5  example5_output.csv  massif.out.8409  optimized_example5_output.csv  optimized_mem_leak.cpp
HW/Sharmila_Rohit_Project/6/: example6  example6_output.csv  massif.out.8534  optimized_example6_output.csv  optimized_recursive.cpp
